# Modbus-STM32-HAL-FreeRTOS

./: CMakeLists.txt  README.md
MODBUS-LIB/Config/: ModbusConfig.h  ModbusConfigTemplate.h
MODBUS-LIB/Inc/: Modbus.h
MODBUS-LIB/Inc/extensions/: modbus_data.h  modbus_handler.h  modbus_registry.h  modbus_sync.h
MODBUS-LIB/Inc/ports/: modbus_port.h  modbus_port_types.h
MODBUS-LIB/Inc/ports/stm32/: modbus_port_stm32.h  modbus_uart_callback.h
MODBUS-LIB/Src/: Modbus.c
MODBUS-LIB/Src/extensions/: modbus_data.c  modbus_handler.c  modbus_registry.c  modbus_sync.c
MODBUS-LIB/Src/ports/stm32/: modbus_port_stm32.c  modbus_uart_callback.c
